# Jugalbandi-Studio-Engine

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  backup.sql  build.sh  combined_dump.sql  docker-compose.yml  main.py  pyproject.toml  run.sh
.github/workflows/: docker-image-push.yml
app/: jb.py
app/jb_manager_bot/: __init__.py  abstract_fsm.py
app/jb_manager_bot/parsers/: __init__.py
app/jb_manager_bot/parsers/option_parser/: __init__.py
app/utils/: codegen.py  convert_dsl_for_test.py  feedback_gen.py  llm.py  mermaid_chart.py  nlr_gen.py  question_answer.py  test_codegen.py  vizgen.py
deployment/azure/: README.md
deployment/azure/engine/: parameters.json  template.json
deployment/azure/server/: parameters.json  template.json
mocks/payment-page/: README.md  index.html
plugins/: data_submission_plugin.yaml  knowledge_plugin.json  knowledge_plugin.yaml  kyc_plugin.yaml  payment_plugin.py  payment_plugin.yaml  reasoning_plugin.json  reasoning_plugin.yaml
plugins-lib/: pyproject.toml
plugins-lib/plugins/: __init__.py  availability.py
plugins/jb-payment/: README.md  payment_plugin.yaml  pyproject.toml
plugins/jb-payment/jb_payment/: __init__.py  payment.py
plugins/jb-reasoning-engine/: README.md  pyproject.toml  reasoning-engine.yaml
plugins/jb-reasoning-engine/jb_reasoning_engine/: __init__.py  reasoning_engine_plugin.py
plugins/payment-plugin/: README.md  payment_plugin.yaml  pyproject.toml
plugins/payment-plugin/payment_plugin/: __init__.py  payment.py
scripts/: create-all-topics.sh  run.sh
studio-and-manager/: .env-dev.template  README.md  docker-compose.yml  jbmanager_dump.sql  jbstudio_dump.sql  studio_locale_en.json
studio-and-manager/config/: config.json  jbstudio.json
studio-and-manager/scripts/: create-all-topics.sh  create-databases.sh  run.sh
