[tool.poetry]
name = "payment-plugin"
version = "0.1.0"
description = ""
authors = ["Shrey Pandey <shreypandey1509@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
jb-manager-bot = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
